app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-app
  namespace: default

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`app.cati.com`)
      kind: Rule
      services:
        - name: demo-app-service
          port: 80
